@@ -28,20 +28,18 @@ import java.util.List;
 */
 
 @Configuration
-@EnableWebSecurity(debug = false) // 개발환경에서만 true 옵션을 주자
+@EnableWebSecurity(debug = true) // 개발환경에서만 true 옵션을 주자
 public class SecurityConfig {
 
     private final JWTUtil jwtUtil;
     private final RefreshTokenService refreshTokenService; // 생성자에 주입
     private final BaseUserRepository baseUserRepository;
 
-
     public SecurityConfig(JWTUtil jwtUtil, RefreshTokenService refreshTokenService, BaseUserRepository baseUserRepository) {
         this.jwtUtil = jwtUtil;
         this.refreshTokenService = refreshTokenService;
         this.baseUserRepository = baseUserRepository;
     }
-
 
     /* 인증할 때 비밀번호를 해시로 암호화해서 검증하고 진행하기 위함 */
     @Bean
@@ -87,7 +85,9 @@ public class SecurityConfig {
                         configuration.setAllowCredentials(true);
                         configuration.setAllowedHeaders(Collections.singletonList("*"));
                         configuration.setMaxAge(3600L);
-                        configuration.setExposedHeaders(List.of("Authorization","Refresh-Token")); // 리프레시 토큰 구현위한 수정
+
+                        configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
+                        configuration.setExposedHeaders(Collections.singletonList("access"));
                         return configuration;
                     }
                 }));
@@ -106,7 +106,7 @@ public class SecurityConfig {
                     "/api/auth/login",
                     "/api/auth/signup/**",
                     "api/auth/logout",
-                    "api/auth/refresh")
+                    "api/auth/reissue")
                 .permitAll()
                 // HTML 페이지
                 .requestMatchers(
@@ -150,9 +150,4 @@ public class SecurityConfig {
 
         return http.build();
     }
-    /* 여러개의 SecurityFilterChain 설정을 위한 2번째 필터체인 메소드 */
-//    @Bean
-//    public SecurityFilterChain filterChain2(HttpSecurity http) throws Exception {
-//        return http.build();
-//    }
 }
